# dvbstreamer-2.1.0

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: changelog  control  copyright  gbp.conf  rules
debian/patches/: libev.patch  pkgincludedir.patch  series  svn_803.diff  svn_804.diff  svn_805.diff  svn_806.diff  svn_807.diff  svn_809.diff  svn_812.diff  svn_813.diff  svn_814.diff  svn_819.diff  usr_share_doc.patch  usr_share_doc_in.patch
include/: Makefile.am  Makefile.in  remoteintf.h
include/dvbpsi/: Makefile.in
src/: Makefile.in
src/dvbpsi/: Makefile.in
src/dvbpsi/descriptors/: dr_04.c
src/plugins/: Makefile.in
